<resources>
    <string name="app_name">Yo\'lga Hamroh</string>
    <string name="start_journey">Sayohatni Boshladik!</string>
    <string name="hamroh_toping">Hamrohingizni Toping</string>
    <string name="phone_number">Telefon Raqamingiz</string>
    <string name="sign_in">Kirish</string>
    <string name="sms_code">Sms Kod Kiriting</string>
    <string name="resend_code">Kodni Qayta Yuborish</string>
    <string name="your_name">Ismingizni Kiriting</string>
    <string name="from_where_you_start">Boshlang\'ich Joylashuv</string>
    <string name="where_you_want_to_go">Ko\'zlangan Manzil</string>
    <string name="taxi_fare">Yo\'l Haqqi</string>
    <string name="pick_start_time">Jo\'nash Vaqtini Belgilang</string>
    <string name="logout">Chiqish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>