<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".fragments.RegisterFragment">

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_background"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/sign_in"
        android:textSize="18sp"
        app:backgroundTint="@null" />

    <EditText
        android:id="@+id/sms_code_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_background"
        android:hint="@string/sms_code"
        android:inputType="number"
        android:visibility="gone"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/resend_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:text="@string/resend_code"
        android:textColor="@color/blue_700"
        android:textSize="16sp" />

</LinearLayout>