<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbars="none"
    android:padding="30dp"
    tools:context=".fragments.AddUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_background"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_background"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/person_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_background"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/from_where_you_start"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/from_region_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_background"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/from_place_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_background"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/where_you_want_to_go"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/to_region_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_background"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/to_place_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_background"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/seat_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_background"
            android:hint="O'rin Soni"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/taxi_fare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_background"
            android:hint="@string/taxi_fare"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/pick_start_time"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_background"
            app:drawableRightCompat="@drawable/ic_cal"
            android:drawablePadding="15dp"
            android:hint="Sana Kiriting"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_background"
            android:clickable="true"
            android:focusable="true"
            app:drawableRightCompat="@drawable/ic_clock"
            android:drawablePadding="15dp"
            android:hint="Vaqt Kiriting"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/add_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_bg"
            android:text="Qo'shish"
            app:backgroundTint="@null" />

    </LinearLayout>

</ScrollView>